hphp/test/slow/reified_generics/reified-parent-with-erasure-2.php.expectf
Fatal error: Class D requires 1 generics but 2 given in %s on line 6
